--- a/service/service_cmn/src/main/resources/application.yml
+++ b/service/service_cmn/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 # 服务器名
 spring:
   application:
-    name: service-hosp
+    name: service-cmn
   profiles:
     #环境设置：dev、test、prod
     active: dev
@@ -20,7 +20,7 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   redis:
-    host: 192.168.1.224
+    host: 192.168.50.224
     port: 6379
     database: 0
     timeout: 1800000
@@ -31,3 +31,6 @@ spring:
         max-wait: -1
         max-idle: 5
         min-idle: 0
+  cloud:
+    nacos:
+      server-addr: 127.0.0.1:8848
