--- a/service_gateway/src/main/resources/application.yml
+++ b/service_gateway/src/main/resources/application.yml
@@ -1,21 +1,21 @@
-# \u670D\u52A1\u7AEF\u53E3
+# 服务端口
 server:
   port: 81
 
 spring:
   application:
-    name: service-gateway # \u670D\u52A1\u540D
+    name: service-gateway # 服务名
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8848 # nacos\u670D\u52A1\u5730\u5740
+      server-addr: 127.0.0.1:8848 # nacos服务地址
     gateway:
       discovery:
         locator:
-          enabled: true # \u4F7F\u7528\u670D\u52A1\u53D1\u73B0\u8DEF\u7531
+          enabled: true # 使用服务发现路由
       routes:
-        - id: service-hosp # \u8BBE\u7F6E\u8DEF\u7531id
-          uri: lb://service-hosp # \u8BBE\u7F6E\u8DEF\u7531uri
-          predicates: #\u8BBE\u7F6E\u8DEF\u7531\u65AD\u8A00
+        - id: service-hosp # 设置路由id
+          uri: lb://service-hosp # 设置路由uri
+          predicates: #设置路由断言
             - name: Path
               args:
                 - /*/hosp/**
@@ -25,3 +25,16 @@ spring:
             - name: Path
               args:
                 - /*/cmn/**
+        - id: service-user
+          uri: lb://service-user
+          predicates:
+            - name: Path
+              args:
+                - /*/user/**
+                - /*/ucenter/**
+        - id: service-msm
+          uri: lb://service-msm
+          predicates:
+            - name: Path
+              args:
+                - /*/msm/**
