用户认证等

--- a/service_gateway/src/main/resources/application.yml
+++ b/service_gateway/src/main/resources/application.yml
@@ -38,3 +38,9 @@ spring:
             - name: Path
               args:
                 - /*/msm/**
+        - id: service-oss
+          uri: lb://service-oss
+          predicates:
+            - name: Path
+              args:
+                - /*/oss/**
