预约挂号和预约统计

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>common_util</module>
         <module>service_util</module>
+        <module>rabbit_util</module>
     </modules>
 
     <dependencies>
