--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>service_client</module>
         <module>service_client/service_cmn_client</module>
         <module>service_gateway</module>
+        <module>service_client/service_user_client</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -129,5 +130,18 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <!--项目打包时会将java目录中的*.xml文件也进行打包-->
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 
 </project>
