--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,6 +18,9 @@
         <module>service_user</module>
         <module>service_msm</module>
         <module>service_oss</module>
+        <module>service_order</module>
+        <module>service_task</module>
+        <module>service_statistics</module>
     </modules>
     <dependencies>
         <dependency>
